2013-03-23  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (show_color): fix that works for MinGW

2013-03-21  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, version.c (avt_wide_version): new function

2013-03-20  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_wide_copyright, avt_wide_license):
	new functions

	* avatar.c (avt_input): fix display bug

2013-03-19  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c, colorchooser.c:
	use locale dependend multibyte functions instead of iconv

2013-03-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_quit_encoding_function): new function
	avatar.c (avt_quit), avtencoding.c: adapted

	* avatar-sdl.c (avt_set_title): don't even try to recode

	* example.c: only use wide characters

2013-03-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtgraphic.h, avtgraphic.c: new files
	avatar.c: adapted

2013-03-15  Andreas K. Foerster  <info@akfoerster.de>

	* avtxbm.c, avtxpm.c, avtbmp.c: new files
	avatar.c: adapted

2013-03-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (screen): screen is a separate static variable again

	* avtencoding.c: new file
	avatar.c: adapted

2013-02-26  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, filechooser.c (avta_file_selection, avta_filter):
	new option data

2013-02-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_choice): fix: check values

2013-02-24  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avtpalette.c (avt_palette_size): new function

	* colorchooser.c: use avt_menu

	* filechooser.c: use avt_menu

2013-02-23  Andreas K. Foerster  <info@akfoerster.de>

	* avtmenu.c: new file
	akfavatar.h: adapted
	lua/lua-avt.c (lavt_menu): adapted

2013-02-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_border3d):
	no coordinates, always draws around the graphic

2013-02-10  Andreas K. Foerster  <info@akfoerster.de>
